<resources>
    <string name="app_name">МЭРИ Smart</string>
    <string name="action_settings">Настройки</string>
    <string name="charge">Заряд</string>

    <string name="checkbox1_title">CheckBox 1</string>
    <string name="checkbox1_summary">Summary of CheckBox 1</string>
    <string name="edittext1_title">EditText 1</string>
    <string name="edittext1_summary">Summary of EditText 1</string>
    <string name="list1_title">List 1</string>
    <string name="list1_summary">Summary of List 1</string>
    <string name="Site">ПК:</string>
    <string name="SiteName">Имя пикета</string>
    <string name="dU1label">ΔU (1) :</string>
    <string name="mV">мВ</string>
    <string name="dU3label">ΔU (3) :</string>
    <string name="dU5label">ΔU (5) :</string>
    <string name="dPhi1_3label">Δφ (1–3) :</string>
    <string name="degree">°</string>
    <string name="dPhi3_5label">Δφ (3–5) :</string>
    <string name="no_data">. . .</string>
    <string name="defaultSiteName">001</string>
    <string name="Stop">СТОП</string>
    <string name="clear">CБРОС</string>
    <string name="start">СТАРТ</string>

    <string-array name="entries">
        <item>one</item>
        <item>two</item>
        <item>three</item>
    </string-array>

    <string-array name="entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="Frequencies">
        <item>1.22 Гц</item>
        <item>2.44 Гц</item>
        <item>4.88 Гц</item>
        <item>9.76 Гц</item>
    </string-array>

    <string-array name="Methods">
        <item>ЧЗ-ВП</item>
        <item>ВЭЗ-ВП</item>
        <item>Электропрофилирование</item>
        <item>Промышленные частоты | 50 Гц</item>
        <item>Промышленные частоты | 60 Гц</item>
        <item>Естественная поляризация</item>
        <item>Блуждающие токи</item>
    </string-array>

    <string name="Method">Метод</string>
    <string name="Connection">Подключение к прибору</string>
    <string name="Settings">Настройки</string>
    <string name="enter_site_name">Введите имя пикета</string>
    <string name="ok">Ok</string>
    <string name="default_site_name">p01-001</string>
    <string name="cancel">Отмена</string>
    <string name="method_summary">Выбор электроразведочного метода из списка</string>

</resources>
