<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.nordwest.maryl.MainActivity">

    <item
        android:id="@+id/indicator_charge"
        android:icon="@drawable/ic_battery_unknown"
        android:title="@string/charge"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"
        android:onClick="onSettingsClick" />

    <item
        android:id="@+id/method"
        android:title="@string/Method"
        app:showAsAction="never"
        android:onClick="onMethodClick" />

    <item
        android:id="@+id/connection"
        android:title="@string/Connection"
        app:showAsAction="never"
        android:onClick="onConnectionClick" />

</menu>
