<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dU1label"
            android:layout_column="0"
            android:layout_row="0"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_gravity="end" />

        <TextView
            android:layout_column="1"
            android:layout_row="0"
            android:layout_width="wrap_content"
            android:minEms="4"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:id="@+id/dU1value"
            android:text="@string/no_data"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="?android:attr/colorActivatedHighlight"
            android:layout_gravity="end"
            android:gravity="center_vertical|end" />

        <TextView
            android:text="@string/mV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:text="@string/no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dU1err"
            android:textColor="?android:attr/textColorTertiary"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dU3label"
            android:layout_column="0"
            android:layout_row="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_gravity="end" />

        <TextView
            android:layout_column="1"
            android:layout_row="1"
            android:layout_width="wrap_content"
            android:minEms="4"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:id="@+id/dU3value"
            android:text="@string/no_data"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="?android:attr/colorActivatedHighlight"
            android:layout_gravity="end"
            android:gravity="center_vertical|end" />

        <TextView
            android:text="@string/mV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:text="@string/no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dU3err"
            android:textColor="?android:attr/textColorTertiary"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dU5label"
            android:layout_column="0"
            android:layout_row="2"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_gravity="end" />

        <TextView
            android:layout_column="1"
            android:layout_row="2"
            android:layout_width="wrap_content"
            android:minEms="4"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:id="@+id/dU5value"
            android:text="@string/no_data"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="?android:attr/colorActivatedHighlight"
            android:layout_gravity="end"
            android:gravity="center_vertical|end" />

        <TextView
            android:text="@string/mV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:text="@string/no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dU5err"
            android:textColor="?android:attr/textColorTertiary"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <FrameLayout
            android:layout_column="0"
            android:layout_row="3"
            android:layout_width="match_parent"
            android:background="?attr/colorButtonNormal"
            android:layout_height="3dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dPhi1_3label"
            android:layout_column="0"
            android:layout_row="4"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_gravity="end" />

        <TextView
            android:layout_column="1"
            android:layout_row="4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:minEms="4"
            android:id="@+id/dPhi1_3value"
            android:text="@string/no_data"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="?android:attr/colorAccent"
            android:layout_gravity="end"
            android:gravity="center_vertical|end" />

        <TextView
            android:text="@string/degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:attr/textColorTertiary"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
            android:paddingEnd="5dp"
            android:paddingStart="5dp" />

        <TextView
            android:text="@string/no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dPhi1_3err"
            android:textColor="?android:attr/textColorTertiary"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dPhi3_5label"
            android:layout_column="0"
            android:layout_row="5"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_gravity="end" />

        <TextView
            android:layout_column="1"
            android:layout_row="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:minEms="4"
            android:id="@+id/dPhi3_5value"
            android:text="@string/no_data"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="?android:attr/colorAccent"
            android:layout_gravity="end"
            android:gravity="center_vertical|end" />

        <TextView
            android:text="@string/degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView30"
            android:textColor="?android:attr/textColorTertiary"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
            android:paddingEnd="5dp"
            android:paddingStart="5dp" />

        <TextView
            android:text="@string/no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dPhi3_5err"
            android:textColor="?android:attr/textColorTertiary"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

</GridLayout>