<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ru.nordwest.maryl.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical"
    android:background="?attr/colorBackgroundFloating"
    android:theme="@android:style/Theme.Holo.Light.DarkActionBar">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:id="@+id/InfoPanel"
        android:padding="10dp"
        android:background="?attr/actionModeSplitBackground">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/siteNameGroup">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Site"
                android:paddingEnd="5dp"
                android:textColor="?android:attr/textColorTertiary" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:onClick="EnterSiteNameDialog"
                android:id="@+id/siteNameEditField">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultSiteName"
                    android:id="@+id/siteName"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@android:drawable/ic_menu_edit" />
            </LinearLayout>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/buttonAddNewSite"
                android:src="@android:drawable/ic_menu_add"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:scaleX="1.5"
                android:scaleY="1.5" />
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/frequencyGroup"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="F:"
                android:id="@+id/textView11"
                android:textColor="?android:attr/textColorTertiary" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:entries="@array/Frequencies"
                style="@android:style/Widget.Holo.Spinner"
                android:theme="@android:style/TextAppearance.DeviceDefault.Medium.Inverse" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="(1)"
            android:id="@+id/measNumber"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Data"
        android:padding="10dp"
        android:layout_below="@+id/InfoPanel">

        <include layout="@layout/measurement_data" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/SignalGraph"
        android:layout_width="match_parent"
        android:background="?android:attr/textColorHint"
        android:layout_height="match_parent"
        android:layout_below="@+id/Data"
        android:layout_above="@+id/BottomPanel">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true">

            <ImageView
                android:layout_height="match_parent"
                android:id="@+id/imageView60"
                android:background="@android:color/background_light"
                android:layout_above="@+id/horizontal_grid_label_2"
                android:layout_centerHorizontal="true"
                android:layout_width="1dp"
                android:alpha="0.5" />

            <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/horizontal_grid_label_2"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textColor="?android:attr/textColorSecondaryInverse"
                android:padding="2dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <ImageView
                android:layout_height="1dp"
                android:id="@+id/imageView160"
                android:background="@android:color/background_light"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:alpha="0.5"
                android:layout_toEndOf="@+id/vertical_grid_label_2" />

            <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/vertical_grid_label_2"
                android:layout_centerVertical="true"
                android:textColor="?android:attr/textColorSecondaryInverse"
                android:padding="2dp"
                android:layout_alignParentStart="true" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_vertical"
                android:layout_weight="1">

                <ImageView
                    android:layout_height="1dp"
                    android:id="@+id/imageView180"
                    android:background="@android:color/background_light"
                    android:layout_centerVertical="true"
                    android:layout_width="match_parent"
                    android:alpha="0.5"
                    android:layout_toEndOf="@+id/vertical_grid_label_3" />

                <TextView
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/vertical_grid_label_3"
                    android:layout_centerVertical="true"
                    android:textColor="?android:attr/textColorSecondaryInverse"
                    android:padding="2dp"
                    android:layout_alignParentStart="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_vertical"
                android:layout_weight="1">

                <ImageView
                    android:layout_height="1dp"
                    android:id="@+id/imageView150"
                    android:background="@android:color/background_light"
                    android:layout_centerVertical="true"
                    android:layout_width="match_parent"
                    android:alpha="0.5"
                    android:layout_toEndOf="@+id/vertical_grid_label_1" />

                <TextView
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/vertical_grid_label_1"
                    android:layout_centerVertical="true"
                    android:textColor="?android:attr/textColorSecondaryInverse"
                    android:padding="2dp"
                    android:layout_alignParentStart="true" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="fill_horizontal"
                android:layout_weight="1">

                <ImageView
                    android:layout_height="match_parent"
                    android:background="@android:color/background_light"
                    android:layout_above="@+id/horizontal_grid_label_1"
                    android:layout_centerHorizontal="true"
                    android:layout_width="1dp"
                    android:alpha="0.5" />

                <TextView
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/horizontal_grid_label_1"
                    android:layout_centerHorizontal="true"
                    android:textColor="?android:attr/textColorSecondaryInverse"
                    android:padding="2dp"
                    android:layout_alignParentBottom="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="fill_horizontal"
                android:layout_weight="1">

                <ImageView
                    android:layout_height="match_parent"
                    android:id="@+id/imageView"
                    android:background="@android:color/background_light"
                    android:layout_above="@+id/horizontal_grid_label_3"
                    android:layout_centerHorizontal="true"
                    android:layout_width="1dp"
                    android:alpha="0.5" />

                <TextView
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/horizontal_grid_label_3"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:textColor="?android:attr/textColorSecondaryInverse"
                    android:padding="2dp" />
            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/BottomPanel"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <Button
            android:text="@string/Stop"
            android:layout_height="wrap_content"
            android:id="@+id/buttonStop"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@android:color/holo_red_light"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Button
            android:text="@string/clear"
            android:layout_height="wrap_content"
            android:id="@+id/buttonClear"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Button
            android:text="@string/start"
            android:layout_height="wrap_content"
            android:id="@+id/buttonStart"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@android:color/holo_green_light"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>

</RelativeLayout>
